--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	&nbsp;
 </div>
 <div> 
-	<p align="center"> <img   style="height:300px; width:300px" src="images/farmersfresh.png"/> 
-	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px" src="images/under_construction.png"/>&nbsp;&nbsp;
-	<img   style="height:300px; width:300px" src="images/comingsoon.png"/></p>
+	<p align="center"> <img   style="height:300px; width:300px" src="farmersfresh.png"/> 
+	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px" src="under_construction.png"/>&nbsp;&nbsp;
+	<img   style="height:300px; width:300px" src="comingsoon.png"/></p>
 </div>
 
 </div>
