--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div> 
 	<p align="center"> <img   style="height:300px; width:300px" src="farmersfresh.png"/> 
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px" src="under_construction.png"/>&nbsp;&nbsp;
-	<img   style="height:300px; width:300px" src="comingsoon.png"/></p>
+	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
 
 </div>
