--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px"  src="uc.png"/>&nbsp;&nbsp;
 	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
-<div align="center"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
+<div style= "align:center, background-color: green";> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
 		   whatsapp @ 7483600985 </p>
 								     </div>
 </div>
