--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <html>
 
 <title>Farmers Fresh </title>
+	<style>
+  .red-text {
+    color: red;
+  }
+
+  h2 {
+    font-family: Lobster, monospace;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+
+  .thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 50%;
+  }
+
+  .smaller-image {
+    width: 100px;
+  }
+</style>
 <body>
 <div height="100"%" align="center"> 
 <div height="50%" align="center"> 
@@ -11,7 +36,7 @@
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px"  src="uc.png"/>&nbsp;&nbsp;
 	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
-<div style= "align:center, background-color: green";> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
+<div class="red-text thick-green-border"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
 		   whatsapp @ 7483600985 </p>
 								     </div>
 </div>
