--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     font-family: Lobster, monospace;
   }
 
-  p {
-    font-size: 16px;
+  sfont {
+    font-size: 20px;
     font-family: monospace;
+	  font-color:green;
   }
 
   .thick-green-border {
@@ -36,7 +37,7 @@
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px"  src="uc.png"/>&nbsp;&nbsp;
 	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
-<div class="red-text thick-green-border"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
+<div class="red-text sfont"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
 		   whatsapp @ 7483600985 </p>
 								     </div>
 </div>
