--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   sfont {
     font-size: 20px;
-    font-family: monospace;
-	  font-color:green;
+    font-family: Arial Black;
+	 font-color:green;
   }
 
   .thick-green-border {
@@ -37,7 +37,7 @@
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px"  src="uc.png"/>&nbsp;&nbsp;
 	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
-<div class="red-text sfont"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
+<div class="sfont"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
 		   whatsapp @ 7483600985 </p>
 								     </div>
 </div>
