--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     font-family: Lobster, monospace;
   }
 
-  sfont {
+  p {
     font-size: 20px;
-    font-family: Arial Black;
+    font-family: "Arial Black";
 	 font-color:green;
   }
 
