--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     font-family: Lobster, monospace;
   }
 
-  p {
+  .parafont {
     font-size: 20px;
     font-family: "Arial Black";
 	 font-color:green;
@@ -37,7 +37,7 @@
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px"  src="uc.png"/>&nbsp;&nbsp;
 	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
-<div class="sfont"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
+<div class="parafont"> <p align="center"> For Trade Enquiry Contact @ efarmersfresh@gmail.com <br/>
 		   whatsapp @ 7483600985 </p>
 								     </div>
 </div>
