--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   .parafont {
     font-size: 20px;
     font-family: "Arial Black";
-	 font-color: #00ff00;
+     color: green;
   }
 
   .thick-green-border {
@@ -37,6 +37,11 @@
 	&nbsp;&nbsp;&nbsp;<img   style="height:300px; width:300px"  src="uc.png"/>&nbsp;&nbsp;
 	<img   style="height:300px; width:300px" src="Comingsoon.png"/></p>
 </div>
+								     &nbsp;<br/>&nbsp;
+								     &nbsp;<br/>&nbsp;
+								     &nbsp;<br/>&nbsp;
+								     &nbsp;<br/>&nbsp;
+								     &nbsp;<br/>&nbsp;
 <div class="parafont"> <p align="center"> For Trade Enquiry Contact: efarmersfresh@gmail.com <br/>
 		   whatsapp: 7483600985 </p>
 								     </div>
