--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 								     &nbsp;<br/>&nbsp;
 								     &nbsp;<br/>&nbsp;
 								     &nbsp;<br/>&nbsp;
-<div class="parafont"> <p align="center"> For Trade Enquiry Contact: efarmersfresh@gmail.com <br/>
-		   whatsapp: 7483600985 </p>
+<div class="parafont"> <p style="color:green"> For Trade Enquiry Contact: efarmersfresh@gmail.com <br/>
+		   whatsapp:+91-7483600985 </p>
 								     </div>
 </div>
 </body>
